--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nihal.portfolio.cli",
-  "version": "1.0.0",
+  "name": "nihal-portfolio-cli",
+  "version": "1.0.2",
   "description": "A terminal based portfolio",
   "keywords": [
     "portfolio",
@@ -18,6 +18,14 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nihal-soni/nihal.portfolio.cli.git"
+  },
+  "homepage": "https://github.com/nihal-soni/nihal.portfolio.cli#readme",
+  "bugs": {
+    "url": "https://github.com/nihal-soni/nihal.portfolio.cli/issues"
   },
   "dependencies": {
     "boxen": "^8.0.1",
